# gdep073e01

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  create-release.yml  docs.yml  publish.yml  release-please.yml
gdep073e01/: all.html  constant.HEIGHT.html  constant.WIDTH.html  enum.Color.html  enum.Error.html  index.html  sidebar-items.js  struct.Gdep073e01.html
gdep073e01/adapter/: index.html  sidebar-items.js  struct.DitherDrawTarget.html
gdep073e01/dither/: index.html  sidebar-items.js  struct.Bayer4x4.html  trait.DitherStrategy.html
gdep073e01/palette/: constant.PALETTE.html  enum.Spectra6.html  fn.add_bias.html  fn.clamp_u8.html  fn.map_rgb_to_spectra6_nearest.html  index.html  sidebar-items.js
gdep073e01/prelude/: index.html  sidebar-items.js  struct.Angle.html  struct.Pixel.html  struct.Point.html  struct.Size.html  trait.AngleUnit.html  trait.ContainsPoint.html  trait.ContiguousIteratorExt.html  trait.DelayNs.html  trait.DigitalErrorType.html  trait.Dimensions.html  trait.DrawTarget.html  trait.DrawTargetExt.html  trait.Drawable.html  trait.GrayColor.html  trait.ImageDrawable.html  trait.ImageDrawableExt.html  trait.InputPin.html  trait.IntoStorage.html  trait.OffsetOutline.html  trait.OriginDimensions.html  trait.OutputPin.html  trait.PixelColor.html  trait.PixelIteratorExt.html  trait.PointsIter.html  trait.Primitive.html  trait.RawData.html  trait.RgbColor.html  trait.SpiDevice.html  trait.SpiErrorType.html  trait.Transform.html  trait.WebColors.html  trait._.html
search.desc/gdep073e01/: gdep073e01-desc-0-.js
src/: adapter.rs  dither.rs  lib.rs  palette.rs
src/gdep073e01/: adapter.rs.html  dither.rs.html  lib.rs.html  palette.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/embedded_graphics/geometry/angle/: trait.AngleUnit.js
trait.impl/embedded_graphics_core/draw_target/: trait.DrawTarget.js
trait.impl/embedded_graphics_core/geometry/: trait.OriginDimensions.js
trait.impl/embedded_graphics_core/pixelcolor/: trait.PixelColor.js
