[package]
name = "gdep073e01"
version = "0.3.0"
edition = "2021"
authors = ["Andrei Kandratovich <xandron.ak@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Embedded-graphics driver for the GDEP073E01 7-color e-paper display"
repository = "https://github.com/xandronak/gdep073e01"
documentation = "https://docs.rs/gdep073e01"
homepage = "https://github.com/xandronak/gdep073e01"
readme = "README.md"
keywords = ["embedded", "graphics", "epaper", "eink", "display"]
categories = ["embedded", "graphics", "hardware-support", "no-std"]
exclude = ["examples/", "tests/", ".github/"]

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]