[package]
name = "gdep073e01"
version = "0.4.0"
edition = "2021"
authors = ["Andrei Kandratovich <xandron.ak@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Embedded-graphics driver for the GDEP073E01 7-color e-paper display"
repository = "https://github.com/xandronak/gdep073e01"
documentation = "https://docs.rs/gdep073e01"
homepage = "https://github.com/xandronak/gdep073e01"
readme = "README.md"
keywords = ["embedded", "graphics", "epaper", "eink", "display"]
categories = ["embedded", "graphics", "hardware-support", "no-std"]
exclude = ["examples/", "tests/", ".github/"]

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "1.0"

[features]
default = []
# Palette and mapping helpers
pal-spectra6 = []
# Choose exactly one of these at a time (compile-time check enforced in code)
dither-bayer = ["pal-spectra6"]
dither-fs = ["pal-spectra6"]
halftone = ["pal-spectra6"]

[package.metadata.docs.rs]
no-default-features = true
features = ["pal-spectra6", "dither-bayer"]
rustdoc-args = ["--cfg", "docsrs"]